# rust-irc

./: Cargo.toml  Dockerfile  PROTOCOL.md  README.md  Settings.toml  TODO.md  docker-compose.yml
src/: channels.rs  client_listener.rs  client_sender.rs  context.rs  error.rs  main.rs  message_handler.rs  message_parsing.rs  messages.rs  replies.rs  server.rs  settings.rs  util.rs
src/handlers/: join.rs  mod.rs  mode.rs  nick.rs  part.rs  ping.rs  privmsg.rs  quit.rs  user.rs  who.rs
