[package]
name = "rust-irc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
uuid = { version = "0.8.2", features = [ "v4" ] }
regex = "1.5.4"

[dev-dependencies]
test-case = "1.2.1"
