[package]
name = "rust-irc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
chrono = "0.4.19"
uuid = { version = "0.8.2", features = [ "v4" ] }
regex = "1.5.4"
async-trait = "0.1.52"
pin-project-lite = "0.2.0"
config = "0.11.0"
serde_derive = "1.0.8"
serde = "1.0.8"

[dev-dependencies]
test-case = "1.2.1"